made necessary changes. all but done i think!

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           ></textarea>
         </div>
         <div class="card-footer">
-            <div class="setting">
+
+          <!-- the boxes of old. keeping code for old times sake -->
+            <!-- <div class="setting">
                 <label for="length">Password length</label>
                 <select id="length"></select>
             </div>
@@ -47,9 +49,10 @@
 
             <div class="setting">
                 <label for="numbers">Include numbers</label>
-                <input type="checkbox" id="numbers" checked>
+                <input type="checkbox" id="numbers" checked> -->
+            <button id="generate" class="btn">Generate Password</button> <!--need to add onclick event or maybe not??-->
             </div>
-          <button id="generate" class="btn">Generate Password</button> <!--need to add onclick event or maybe not??-->
+          
         </div>
       </div>
     </div>
