--- a/index.html
+++ b/index.html
@@ -26,31 +26,8 @@
         </div>
         <div class="card-footer">
 
-          <!-- the boxes of old. keeping code for old times sake -->
-            <!-- <div class="setting">
-                <label for="length">Password length</label>
-                <select id="length"></select>
-            </div>
-
-            <div class="setting">
-                <label for="uppercase">Include uppercase letters</label>
-                <input type="checkbox" id="uppercase" checked>
-            </div>
-
-            <div class="setting">
-                <label for="lowercase">Include lowercase letters</label>
-                <input type="checkbox" id="lowercase" checked>
-            </div>
-
-            <div class="setting">
-                <label for="symbols">Include symbols</label>
-                <input type="checkbox" id="symbols" checked>
-            </div>
-
-            <div class="setting">
-                <label for="numbers">Include numbers</label>
-                <input type="checkbox" id="numbers" checked> -->
-            <button id="generate" class="btn">Generate Password</button> <!--need to add onclick event or maybe not??-->
+         
+            <button id="generate" class="btn">Generate Password</button> 
             </div>
           
         </div>
@@ -61,4 +38,3 @@
   </body>
 </html>
 
-<!-- at first glance it'd seem we need to add a onclick event that opens a function with parameters to select from on how long + what types of characters they want in their password. Then after those selectors have been made we have and if else function  RADIO BUTTONS.-->
